--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,12 @@
   </head>
 
   <body>
-    <h2>rubberband-wasm demo</h2>
+    <h2>
+      rubberband-wasm demo
+      <a href="https://github.com/Daninet/rubberband-wasm" target="_blank" rel="noreferrer">
+        <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/daninet/rubberband-wasm?style=social" />
+      </a>
+    </h2>
     <label>Audio file: <input type="file" id="file" onchange="onNewFile(this)" accept="audio/*" /></label>
     <br /><br /><br />
 
