--- a/demo/index.html
+++ b/demo/index.html
@@ -36,6 +36,6 @@
     <br /><br />
     <button type="button" id="processAndExport" onclick="processAndExport()">Process & Export</button>
 
-    <script src="/demo/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
